Fix font size on mobile devicces

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -58,49 +58,6 @@ header {
   display: none;
 }
 
-@media screen and (max-width: 600px) {
-  .topnav a {
-    display: none;
-    width: 100%%;
-  }
-
-  .topnav a:not(:last-child):hover {
-    border: 1px solid #ff4f00;
-    color: #ff4f00;
-    margin: 0 auto;
-    width: 92%;
-  }
-
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {
-    top: 0;
-    left: 0;
-    position: absolute;
-  }
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 15px;
-  }
-
-  .topnav .icon:hover {
-    color: #ff4f00;
-  }
-
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: center;
-  }
-}
-
 /* End of Navigation style rules */
 
 .hero-image {
@@ -294,6 +251,58 @@ button#cta:hover {
 }
 .fa-heart {
   color: red;
+}
+
+/* responsive style rules  */
+@media screen and (max-width: 600px) {
+  .topnav a {
+    display: none;
+    width: 100%%;
+  }
+
+  .topnav a:not(:last-child):hover {
+    border: 1px solid #ff4f00;
+    color: #ff4f00;
+    margin: 0 auto;
+    width: 92%;
+  }
+
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    top: 0;
+    left: 0;
+    position: absolute;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 15px;
+  }
+
+  .topnav .icon:hover {
+    color: #ff4f00;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: center;
+  }
+
+  div.hero-text h1 {
+    font-size: 25px;
+  }
+
+  div.hero-text p {
+    font-size: 15px;
+  }
 }
 
 /* ----- Style rule for Debugging ----- */
